--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
- <meta http-equiv="refresh" content="0;url=https://luyaoguagua.top">
+ <meta http-equiv="refresh" content="0;url=https://www.luyaoguagua.top">
